[gd_scene load_steps=19 format=2]

[ext_resource path="res://gfx/Overworld.tres" type="TileSet" id=1]
[ext_resource path="res://gfx/font/raw/PlayfairDisplayRegular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gfx/licensed/ASSETS/select_dots.png" type="Texture" id=3]
[ext_resource path="res://gfx/licensed/ASSETS/select_dots_large.png" type="Texture" id=4]
[ext_resource path="res://scenes/menu/Options.gd" type="Script" id=5]
[ext_resource path="res://scenes/menu/MainMenuHover.tres" type="StyleBox" id=6]
[ext_resource path="res://scenes/menu/MainMenuDisabled.tres" type="StyleBox" id=7]
[ext_resource path="res://scenes/menu/MainMenuPressed.tres" type="StyleBox" id=8]
[ext_resource path="res://scenes/menu/MainMenuButtonStyle.tres" type="StyleBox" id=9]
[ext_resource path="res://sounds/textsound.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0.305882, 0.309804, 0.313726, 1 )
grow_begin = 0.0
grow_end = 0.0
thickness = 6

[sub_resource type="StyleBoxLine" id=4]
color = Color( 0.65098, 0.611765, 0.486275, 1 )
thickness = 6

[sub_resource type="StyleBoxLine" id=5]
color = Color( 0.65098, 0.611765, 0.486275, 1 )
thickness = 6

[sub_resource type="StyleBoxLine" id=6]
color = Color( 0.65098, 0.611765, 0.486275, 1 )
thickness = 6

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -376, -48 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TileMap" parent="."]
scale = Vector2( 3, 3 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 18, 0, 1, 18, 0, 2, 18, 0, 16, 18, 0, 17, 18, 0, 18, 18, 0, 19, 18, 0, 20, 18, 0, 21, 18, 0, 65536, 18, 0, 65537, 18, 0, 65543, 18, 0, 65544, 18, 0, 65545, 18, 0, 65546, 18, 0, 65547, 18, 0, 65548, 18, 0, 65549, 18, 0, 65550, 18, 0, 65551, 18, 0, 65552, 18, 0, 65553, 18, 0, 65554, 18, 0, 65555, 18, 0, 65556, 18, 0, 65557, 18, 0, 131072, 18, 0, 131073, 18, 0, 131088, 18, 0, 131089, 18, 0, 131090, 18, 0, 131091, 18, 0, 131092, 18, 0, 131093, 18, 0, 196608, 18, 0, 196609, 18, 0, 196625, 18, 0, 196626, 18, 0, 196627, 18, 0, 196628, 18, 0, 196629, 18, 0, 262144, 18, 0, 262145, 18, 0, 262160, 18, 0, 262161, 18, 0, 262162, 18, 0, 262163, 18, 0, 262164, 18, 0, 262165, 18, 0, 327680, 18, 0, 327681, 18, 0, 327697, 18, 0, 327698, 18, 0, 327699, 18, 0, 327700, 18, 0, 327701, 18, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0 )

[node name="Clouds" type="TileMap" parent="."]
scale = Vector2( 3, 3 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 2, 20, 0, 18, 19, 0, 65536, 20, 0, 65556, 21, 0, 131073, 1610612756, 0, 196629, 19, 0, 262144, 1610612757, 0, 262163, 21, 0, 393215, 3, 2, 327680, 3, 2, 327681, 3, 2, 327699, 3, 2, 327700, 3, 2, 327701, 3, 2 )

[node name="House" type="TileMap" parent="."]
scale = Vector2( 3, 3 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -1441778, 536870920, 3, -1441777, 536870920, 3, -1441776, 536870920, 3, -1441775, 536870920, 3, -1441774, 536870920, 3, -1441773, 8, 4, -1376245, 8, 2, -1376244, 8, 65537, -1376243, 8, 65538, -1376242, 536870920, 65539, -1376241, 536870920, 65539, -1376240, 536870920, 65539, -1376239, 536870920, 65539, -1376238, 536870920, 65539, -1376237, 8, 65540, -1376236, 8, 65541, -1376235, 8, 4, -1310711, 8, 2, -1310710, 8, 65537, -1310709, 8, 65538, -1310708, 8, 131073, -1310707, 8, 131074, -1310706, 536870920, 131075, -1310705, 536870920, 131075, -1310704, 536870920, 131075, -1310703, 536870920, 131075, -1310702, 536870920, 131075, -1310701, 8, 131076, -1310700, 8, 131076, -1310699, 8, 65540, -1310698, 8, 65541, -1310697, 8, 4, -1245176, 8, 65537, -1245175, 8, 65538, -1245174, 8, 131073, -1245173, 8, 131074, -1245172, 8, 131073, -1245171, 8, 196610, -1245170, 8, 196611, -1245169, 8, 196611, -1245168, 8, 196611, -1245167, 8, 196611, -1245166, 8, 196611, -1245165, 8, 196612, -1245164, 8, 196613, -1245163, 8, 131076, -1245162, 8, 131077, -1245161, 8, 65540, -1245160, 8, 65541, -1179640, 8, 131073, -1179639, 8, 131074, -1179638, 8, 131073, -1179637, 8, 196610, -1179636, 8, 262145, -1179635, 8, 262146, -1179634, 8, 262147, -1179633, 8, 262147, -1179632, 8, 262147, -1179631, 8, 262147, -1179630, 8, 262147, -1179629, 8, 262148, -1179628, 8, 262149, -1179627, 8, 196612, -1179626, 8, 196613, -1179625, 8, 131076, -1179624, 8, 131077, -1114104, 8, 131073, -1114103, 8, 196610, -1114102, 8, 262145, -1114101, 8, 262146, -1114100, 8, 262147, -1114099, 8, 262147, -1114098, 8, 262147, -1114097, 8, 262147, -1114096, 8, 262147, -1114095, 8, 262147, -1114094, 8, 262147, -1114093, 8, 262147, -1114092, 8, 262147, -1114091, 8, 262148, -1114090, 8, 262149, -1114089, 8, 196612, -1114088, 8, 196613, -1048568, 8, 262145, -1048567, 8, 262146, -1048566, 8, 262147, -1048565, 8, 262147, -1048564, 8, 262147, -1048563, 8, 262147, -1048562, 8, 262147, -1048561, 8, 262147, -1048560, 8, 262147, -1048559, 8, 262147, -1048558, 8, 262147, -1048557, 8, 262147, -1048556, 8, 262147, -1048555, 8, 262147, -1048554, 8, 262147, -1048553, 8, 262148, -1048552, 8, 262149, -983032, 11, 0, -983031, 8, 262147, -983030, 8, 262147, -983029, 8, 262147, -983028, 8, 262147, -983027, 8, 262147, -983026, 8, 262147, -983025, 8, 262147, -983024, 8, 262147, -983023, 8, 262147, -983022, 8, 262147, -983021, 8, 262147, -983020, 8, 262147, -983019, 8, 262147, -983018, 8, 262147, -983017, 8, 262147, -983016, 11, 4, -917496, 11, 0, -917495, 8, 262147, -917494, 8, 262147, -917493, 8, 262147, -917492, 8, 262147, -917491, 8, 262147, -917490, 8, 262147, -917489, 8, 262147, -917488, 8, 262147, -917487, 8, 262147, -917486, 8, 262147, -917485, 8, 262147, -917484, 8, 262147, -917483, 8, 262147, -917482, 8, 262147, -917481, 8, 262147, -917480, 11, 4, -851960, 11, 0, -851959, 8, 262147, -851958, 8, 262147, -851957, 8, 262147, -851956, 8, 262147, -851955, 8, 262147, -851954, 8, 262147, -851953, 8, 262147, -851952, 8, 262147, -851951, 8, 262147, -851950, 8, 262147, -851949, 8, 262147, -851948, 8, 262147, -851947, 8, 262147, -851946, 8, 262147, -851945, 8, 262147, -851944, 11, 4, -786424, 8, 327681, -786423, 8, 327684, -786422, 8, 327684, -786421, 8, 327684, -786420, 8, 327684, -786419, 8, 327684, -786418, 8, 327684, -786417, 8, 327684, -786416, 8, 327684, -786415, 8, 327684, -786414, 8, 327684, -786413, 8, 327684, -786412, 8, 327684, -786411, 8, 327684, -786410, 8, 327684, -786409, 8, 327684, -786408, 8, 327685, -196600, 536870920, 3, -196599, 536870920, 3, -196598, 536870920, 3, -196597, 536870920, 3, -196596, 536870920, 3, -196595, 8, 4, -131067, 8, 2, -131066, 8, 65537, -131065, 8, 65538, -131064, 536870920, 65539, -131063, 536870920, 65539, -131062, 536870920, 65539, -131061, 536870920, 65539, -131060, 536870920, 65539, -131059, 8, 65540, -131058, 8, 65541, -131057, 8, 4, -65533, 8, 2, -65532, 8, 65537, -65531, 8, 65538, -65530, 8, 131073, -65529, 8, 131074, -65528, 536870920, 131075, -65527, 536870920, 131075, -65526, 536870920, 131075, -65525, 536870920, 131075, -65524, 536870920, 131075, -65523, 8, 131076, -65522, 8, 131076, -65521, 8, 65540, -65520, 8, 65541, -65519, 8, 4, 1, 8, 65536, 2, 8, 65537, 3, 8, 65538, 4, 8, 131073, 5, 8, 131074, 6, 8, 131073, 7, 8, 196610, 8, 8, 196611, 9, 8, 196611, 10, 8, 196611, 11, 8, 196611, 12, 8, 196611, 13, 8, 196612, 14, 8, 196613, 15, 8, 131076, 16, 8, 131077, 17, 8, 65540, 18, 8, 65541, 19, 8, 65542, 65538, 8, 131073, 65539, 8, 131074, 65540, 8, 131073, 65541, 8, 196610, 65542, 8, 262145, 65543, 8, 262146, 65544, 8, 262147, 65545, 8, 262147, 65546, 8, 262147, 65547, 8, 262147, 65548, 8, 262147, 65549, 8, 262148, 65550, 8, 262149, 65551, 8, 196612, 65552, 8, 196613, 65553, 8, 131076, 65554, 8, 131077, 131074, 8, 131073, 131075, 8, 196610, 131076, 8, 262145, 131077, 8, 262146, 131078, 8, 262147, 131079, 8, 262147, 131080, 8, 262147, 131081, 8, 262147, 131082, 8, 262147, 131083, 8, 262147, 131084, 8, 262147, 131085, 8, 262147, 131086, 8, 262147, 131087, 8, 262148, 131088, 8, 262149, 131089, 8, 196612, 131090, 8, 196613, 196609, 8, 65536, 196610, 8, 262145, 196611, 8, 262146, 196612, 8, 262147, 196613, 8, 262147, 196614, 8, 262147, 196615, 8, 262147, 196616, 8, 262147, 196617, 8, 262147, 196618, 8, 262147, 196619, 8, 262147, 196620, 8, 262147, 196621, 8, 262147, 196622, 8, 262147, 196623, 8, 262147, 196624, 8, 262147, 196625, 8, 262148, 196626, 8, 262149, 196627, 8, 65542, 262146, 11, 0, 262147, 8, 262147, 262148, 8, 262147, 262149, 8, 262147, 262150, 8, 262147, 262151, 8, 262147, 262152, 8, 262147, 262153, 8, 262147, 262154, 8, 262147, 262155, 8, 262147, 262156, 8, 262147, 262157, 8, 262147, 262158, 8, 262147, 262159, 8, 262147, 262160, 8, 262147, 262161, 8, 262147, 262162, 11, 4, 327682, 11, 0, 327683, 8, 262147, 327684, 8, 262147, 327685, 8, 262147, 327686, 8, 262147, 327687, 8, 262147, 327688, 8, 262147, 327689, 8, 262147, 327690, 8, 262147, 327691, 8, 262147, 327692, 8, 262147, 327693, 8, 262147, 327694, 8, 262147, 327695, 8, 262147, 327696, 8, 262147, 327697, 8, 262147, 327698, 11, 4, 393216, 16, 65539, 393217, 16, 1, 393218, 11, 0, 393219, 8, 262147, 393220, 8, 262147, 393221, 8, 262147, 393222, 8, 262147, 393223, 8, 262147, 393224, 8, 262147, 393225, 8, 262147, 393226, 8, 262147, 393227, 8, 262147, 393228, 8, 262147, 393229, 8, 262147, 393230, 8, 262147, 393231, 8, 262147, 393232, 8, 262147, 393233, 8, 262147, 393234, 11, 4, 393235, 16, 65537, 393236, 16, 1, 524287, 16, 0, 458752, 16, 65537, 458753, 17, 0, 458754, 11, 0, 458755, 8, 262147, 458756, 8, 262147, 458757, 8, 262147, 458758, 8, 262147, 458759, 8, 262147, 458760, 8, 262147, 458761, 8, 262147, 458762, 8, 262147, 458763, 8, 262147, 458764, 8, 262147, 458765, 8, 262147, 458766, 8, 262147, 458767, 8, 262147, 458768, 8, 262147, 458769, 8, 262147, 458770, 11, 4, 458771, 16, 0, 458772, 17, 65537, 524288, 16, 1, 524289, 16, 65538, 524290, 11, 0, 524291, 8, 262147, 524292, 8, 262147, 524293, 8, 262147, 524294, 8, 262147, 524295, 8, 262147, 524296, 8, 262147, 524297, 8, 262147, 524298, 8, 262147, 524299, 8, 262147, 524300, 8, 262147, 524301, 8, 262147, 524302, 8, 262147, 524303, 8, 262147, 524304, 8, 262147, 524305, 8, 262147, 524306, 11, 4, 524307, 16, 65537, 524308, 16, 1, 589824, 17, 65536, 589825, 16, 0, 589826, 11, 0, 589827, 8, 262147, 589828, 8, 262147, 589829, 8, 262147, 589830, 8, 262147, 589831, 8, 262147, 589832, 8, 262147, 589833, 8, 262147, 589834, 8, 262147, 589835, 8, 262147, 589836, 8, 262147, 589837, 8, 262147, 589838, 8, 262147, 589839, 8, 262147, 589840, 8, 262147, 589841, 8, 262147, 589842, 11, 4, 589843, 16, 0, 589844, 16, 65536, 720895, 16, 0, 655360, 16, 65537, 655362, 11, 0, 655363, 8, 262147, 655364, 8, 262147, 655365, 8, 262147, 655366, 8, 262147, 655367, 8, 262147, 655368, 8, 262147, 655369, 8, 262147, 655370, 8, 262147, 655371, 8, 262147, 655372, 8, 262147, 655373, 8, 262147, 655374, 8, 262147, 655375, 8, 262147, 655376, 8, 262147, 655377, 8, 262147, 655378, 11, 4, 720896, 16, 1, 720897, 16, 65536, 720898, 8, 327681, 720899, 8, 327684, 720900, 8, 327684, 720901, 8, 327684, 720902, 8, 327684, 720903, 8, 327684, 720904, 8, 327684, 720905, 8, 327684, 720906, 8, 327684, 720907, 8, 327684, 720908, 8, 327684, 720909, 8, 327684, 720910, 8, 327684, 720911, 8, 327684, 720912, 8, 327684, 720913, 8, 327684, 720914, 8, 327685, 720915, 16, 65538, 720916, 16, 1, 786432, 17, 1, 786434, 16, 65537, 786435, 16, 65538, 786436, 16, 1, 786438, 16, 65539, 786439, 16, 0, 786440, 16, 65537, 786441, 16, 1, 786443, 16, 65538, 786444, 16, 0, 786447, 16, 1, 786448, 16, 65538, 786450, 16, 0, 786451, 17, 3, 786452, 16, 65539 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -248.0
margin_top = 8.0
margin_right = 246.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblMusic" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -456.0
margin_top = 136.0
margin_right = 38.0
margin_bottom = 297.0
custom_fonts/font = SubResource( 2 )
text = "Music Volume:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="HSlider" parent="."]
margin_left = 512.0
margin_top = 200.0
margin_right = 632.0
margin_bottom = 216.0
rect_scale = Vector2( 3, 2.98529 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 3 )
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 4 )
custom_styles/grabber_area = SubResource( 5 )
min_value = -75.0
max_value = 15.0
step = 0.25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblSoundeffects" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -432.0
margin_top = 224.0
margin_right = 62.0
margin_bottom = 385.0
custom_fonts/font = SubResource( 2 )
text = "SFX Volume:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Soundeffects" type="HSlider" parent="."]
margin_left = 512.0
margin_top = 288.0
margin_right = 632.0
margin_bottom = 304.0
rect_scale = Vector2( 3, 2.98529 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 3 )
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 6 )
custom_styles/grabber_area = SubResource( 5 )
min_value = -75.0
max_value = 15.0
step = 0.25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Label" parent="."]
margin_left = 120.0
margin_top = 408.0
margin_right = 412.0
margin_bottom = 557.0
custom_fonts/font = SubResource( 7 )
text = "Controls:
E - Interact
WASD - Movement
CTRL - Slower Movement"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 704.0
margin_top = 512.0
margin_right = 876.0
margin_bottom = 545.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = SubResource( 8 )
text = "Return"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -18.0
pitch_scale = 0.8
bus = "Dialog"

[connection signal="value_changed" from="Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="Soundeffects" to="." method="_on_Soundeffects_value_changed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
